# bitcask

./: .gitignore  .pre-commit-config.yaml  .tokeignore  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml
benches/: kv_bench.rs
examples/: basic_operations.rs
src/: batch.rs  db.rs  db_tests.rs  error.rs  iterator.rs  lib.rs  merge.rs  option.rs
src/data/: data_file.rs  log_record.rs  mod.rs
src/fileio/: file_io.rs  mmap.rs  mod.rs
src/index/: mod.rs  skiplist.rs
