[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "kv_bench"
harness = false

[dependencies]
thiserror = "1.0.61"
parking_lot = "0.12.3"
log = "0.4.0"
memmap2 = "0.9.4"
bytes="1.6.0"
crossbeam-skiplist = "0.1.3"
prost = "0.12.6"
crc32fast = "1.4.2"
rand = "0.8.5"
fs2 = "0.4.3"
fs_extra = "1.3.0"
criterion = "0.5.1"